<resources>
    <string name="app_name">LandUse Monitor DE</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Wilkommen beim Land Use Monitor DE</string>
    <string name="slide_1_desc">Der Informationquelle zur Flächenstruktur und deren Entwicklung sowie zur Landschaftsqualität flächendeckend für die Bundesrepublik Deutschland </string>
    <string name="slide_2_desc">Durch drücken des Pfeiles erhalten Sie Zugriff auf sämtliche Menüpunkte der Kartes</string>
    <string name="slide_3_desc">Wählen Sie den gewünschten Punkt durch antippen, die Menüpunkte lassen sich vertikal sliden. Verlassen sie den Menüpunkt durch tippen auf die Karte oder der Wahl eines anderen Punnktes</string>
    <string name="slide_4_title">Zur wahl stehen :</string>
    <string name="slide_4_txt_info">Dieser Punkt bietet Informationen zum jeweils gewählten Indikator an. Es können sich die Interpretation und das Kennblatt angezeigt werden lassen. Des Weiteren ist es möglich zur Indikatorenübersicht zu gelangen.</string>
    <string name="slide_4_txt_legende">Dieser Button zeigt die Legende des Indikators an, welche sich je nach gewählten Zeitschnitt dynamisch anpasst.</string>
    <string name="slide_4_txt_ebenen">Hier kann die Grundkarte  festgelegt und die Ländergrenzen, Kreisgrenzen und Gemeindegrenzen visualisiert werden. Zur Auswahl für die Karten stehen Open Street Map und Standardmäßig der WebAtlas.de.</string>
    <string name="slide_4_txt_kalender">Mit Hilfe des Sliders kann der entsprechende Zeitschnitt gewählt werden. Es können nur die Jahre gewählt werden, welche auch zur Verfügung stehen.</string>
    <string name="slide_4_txt_lupe">Suchen Sie Adressen und Orte. Die Kartenansicht zoomt in den gefundenen Bereich hinein.</string>
    <string name="slide_4_txt_helligkeit">Mit dem Slider kann die gewünschte Transparenz des Indikators eingestellt werden.</string>
    <string name="slide_4_txt_ruler">essen Sie Strecken und Flächen auf der Karte.Mit einem Klick auf den Lineal Button und das setzten von Messprunkten auf der Karte, starten Sie eine Messung.</string>
    <string name="slide_4_txt_minimap">Eine kleine Mini Karte stellt den globalen Kontext her. Durch das klicken auf den Toggle Pfeil kann diese wieder verkleinert werden.</string>
    <string name="slide_4_txt_time_scroll">Durch dieses Tool können Sie zwei Zeitschnitte gegenüber stellen. Um eine Wahl der Zeiten für die linke und rechte Karte zu treffen, wird der Menüpunkt der Zeitschnitte um einen weiteren Slider erweitert.</string>
    <string name="slide_4_txt_zoom">Dieses Tool stellt eine alternative zum Fingerzoom dar.Dieses Tool verbessert auch die Geschwindigkeit der Kartenanwendung</string>
    <string name="slide_4_gps">Die Ortung hilft Ihnen dabei, ihre Prosition zu bestimmen. Schalten Sie den ZoomIn Effekt aus, durch erneutes drücken des GPS  Buttons.</string>
    <string name="slide_4_desc"></string>
    <string name="action_settings">Settings</string>
    <string name="trash_string">Trash</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="title_activity_settings">Settings</string>
    <string-array name="kategorie_siedlung">
        <item>Anteil Siedlungsfläche an Gebietsfläche</item>
        <item>Anteil Industrie- und Gewerbefläche an Gebietsfläche</item>
        <item>Anteil Siedlungsfreifläche an Gebietsfläche</item>
        <item>Anteil baulich geprägter Siedlungsfläche ohne Industrie und Gewerbe an Gebietsfläche</item>
        <item>Anteil Siedlungs- und Verkehrsfläche an Gebietsfläche</item>
        <item>Anteil baulich geprägter Siedlungs- und Verkehrsfläche an Gebietsfläche</item>
        <item>Anteil baulich geprägter Siedlungsfläche an Gebietsfläche</item>
        <item>Anteil versiegelter Bodenfläche an Gebietsfläche</item>
    </string-array>
     <string name="methodik_1">
    Die Bodenbedeckung (engl.: land cover) beschreibt die physische Beschaffenheit der Erdoberfläche nach verschiedenen naturnahen oder anthropogen überformten Kategorien.
    </string>
     <string name="methodik_2">
    Unter Flächennutzung bzw. Landnutzung (engl: land use) ist die Art der Inanspruchnahme von Teilen der festen Erdoberfläche durch den Menschen zu verstehen.
    Im Unterschied zur Bodenbedeckung spielt hierbei der Nutzungsaspekt die entscheidende Rolle. Dabei fokussiert der Begriff Flächennutzung stärker auf die bauliche Prägung,
    der Begriff Landnutzung mehr auf das unbebaute Gelände. Der verfügbare Raum kann gleichzeitig mehreren Nutzungsansprüchen unterliegen.
    </string>
    <string name="methodik_3">
    Beim Monitor der Siedlungs- und Freiraumentwicklung ergänzen sich die Komponenten Siedlungsraum, Verkehrsraum und Freiraum komplementär zur gesamten Gebietsfläche
    (Flächensumme = 100%). Alle Bodenbedeckungs- bzw. Flächennutzungsarten sind jeweils einer dieser drei Komponenten zugeordnet und können sich in weitere Klassen unterteilen.
    </string>
    <string name="methodik_4">Flächenschema des IÖR‐Monitors: Vollständige und redundanzfreie Beschreibung der Erdoberfläche durch Flächenkategorien, abgeleitet aus dem ATKIS Basis-DLM (nach AAA‐Modell)</string>
    <string name="methodik_5">Bei der Erstellung der Flächennutzungsgeometrie werden im Falle von Überlagerungen die Flächenkategorien entsprechend der folgenden Tabelle priorisiert. Höhere Ebenen überlagern eventuell darunter befindliche Flächen.</string>
    <string name="ue_methodik_2">Flächenpriorisierung</string>
    <string name="ue_methodik_1">Flächenschema</string>
    <string name="ue_methodik_3">Ebene  Flächenkategorie</string>
    <string name="ue_service_1">Kontakt</string>
    <string name="service_institut">Leibniz-Institut für ökologische Raumentwicklung</string>
    <string name="service_forschungsbereich">Forschungsbereich Monitoring der Siedlungs- und Freiraumentwicklung</string>
    <string name="service_name">Dr. Gotthard Meinel</string>
    <string name="service_strasse">Weberplatz 1</string>
    <string name="service_plz_ort">01217 Dresden</string>
    <string name="service_mail">monitor@ioer.de</string>
    <string name="service_telefone">Tel.  +49 (0)351 4679254</string>
    <string name="service_fax">Fax: +49 (0)351 4679212</string>
    <string name="service_1">Bitte helfen Sie uns, den Monitor der Siedlungs- und Freiraumentwicklung (IÖR-Monitor) immer besser zu machen: Geben Sie uns Hinweise bzgl. Bedienungsproblemen, gewünschte funktionale Erweiterungen oder neue Indikatoren. Auch Hinweise zu ggf. problematischen Indikatorwertausprägungen sind willkommen, wir geben diese nach Prüfung an die jeweils datenführende Stelle weiter.</string>
    <string name="ue_impressum_1">Copyright</string>
    <string name="impressum_haftung_ue">Haftungshinweis:</string>
    <string name="impressum_urheberrecht_ue">Urheberrecht:</string>
    <string name="haftung_1">Trotz sorgfältiger inhaltlicher Kontrolle übernehmen wir keine Haftung für die Richtigkeit, Vollständigkeit und Aktualität der Inhalte dieser und der Seiten, die mittels Link von den WWW-Seiten des Leibniz-Instituts für ökologische Raumentwicklung, Dresden erreichbar sind. Für den Inhalt der verlinkten Webseiten sind ausschließlich deren Betreiber verantwortlich. Das Leibniz-Institut für ökologische Raumentwicklung e. V., Dresden übernimmt insbesondere keinerlei Haftung für eventuelle Schäden oder Konsequenzen, die durch die direkte oder indirekte Nutzung der angebotenen Inhalte entstehen. Für die Sinnfälligkeit individueller Kartengestaltung durch den Nutzer wird keine Haftung übernommen.</string>
    <string name="urheber_1">Alle in diesem Internetangebot des Leibniz-Instituts für ökologische Raumentwicklung veröffentlichten Inhalte (Layout, Texte, Bilder, Grafiken usw.) sind urheberrechtlich geschützt. Jede vom Urheberrechtsgesetz nicht zugelassene Verwertung bedarf vorheriger ausdrücklicher Zustimmung. Dies gilt insbesondere für Vervielfältigung, Bearbeitung, Übersetzung, Einspeicherung, Verarbeitung bzw. Wiedergabe von Inhalten in Datenbanken oder anderen elektronischen Medien und Systemen. Es ist also nicht gestattet, Graphiken, Bilder oder einzelne Seiten zu entnehmen bzw. die Homepage des IÖR oder einzelne Seiten davon unter einer fremden Domain anzeigen zu lassen.</string>
    <string name="urheber_2">Wir erlauben ausdrücklich und begrüßen das Zitieren unserer Dokumente und Webseiten sowie das Setzen von Links auf unsere IÖR-Homepage. Der Ausdruck einzelner Seiten und bereit gestellter PDF-Dateien für den privaten, wissenschaftlichen und nicht kommerziellen Gebrauch ist gestattet. Alle innerhalb des Internetangebotes genannten und ggf. durch Dritte geschützten Marken und Warenzeichen unterliegen uneingeschränkt den Bestimmungen des jeweils gültigen Kennzeichenrechts und den Besitzrechten der jeweiligen eingetragenen Eigentümer. Allein aufgrund der bloßen Nennung ist nicht der Schluss zu ziehen, dass Markenzeichen nicht durch Rechte Dritter geschützt sind.</string>
    <string name="copy_1">Der Monitor der Siedlungs- und Freiraumentwicklung (IÖR-Monitor) ist eine wissenschaftliche Dienstleistung des Leibniz-Instituts für ökologische Raumentwicklung. Die Technologie- und Indikatorentwicklungen erfolgen im Forschungsbereich Monitoring der Siedlungs- und Freiraumentwicklung in Zusammenarbeit mit den anderen Forschungsbereichen des IÖR.</string>
    <string name="copy_2">Die Indikatoren werden auf der Grundlage von Daten des Bundesamtes für Kartographie und Geodäsie, der Vermessungsverwaltungen der Länder, des Bundesamtes für Naturschutz sowie von Daten der Statistischen Ämter des Bundes und der Länder berechnet.</string>
    <string name="copy_3">Sollen Ergebnisse des Monitors weiterverwendet werden, sind die genutzten Karten, Tabellen, Grafiken bzw. Texte generell wie folgt zu kennzeichnen:</string>
    <string name="mail_copy">IÖR-Monitor©Leibniz-Institut für ökologische Raumentwicklung</string>
    <string name="ue_impressum">Impressum</string>
    <string name="indikator_1">Als Indikator (Anzeiger) gilt ein sichtbares oder empirisch fassbares quantitatives Merkmal (Kennzahl), das in Geographie, Raumordnung und Umweltforschung auf nicht unmittelbar zugängliche Raumaspekte, Begriffe oder Prozesse hinweist. Zur Operationalisierung und kartographischen Darstellung sind Indikatoren zu formalisieren und auf konkrete räumliche Bezugseinheiten auszurichten. Bei der georäumlichen Interpretation von Indikatoren werden gleichzeitig abhängige Aspekte der Raumstruktur oder raumwirksamer Prozesse gedanklich vermittelt.</string>
    <string name="indikator_2">In der Raum- und Stadtentwicklungspolitik haben Indikatoren die Funktion, Zielerrreichungsgrade zu messen und die Messergebnisse zu kommunizieren. Dabei spielen folgende Anforderungen eine wichtige Rolle: Zielkonformität, Aussagekraft, Verständlichkeit, räumliche Vergleichbarkeit und Praktikabilität.</string>
    <string name="ue_indikator_1">Kategorien</string>
    <string name="link_siedlung">Zur Indikatorenübersicht der Kategorie: Siedlung</string>
</resources>